--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_maps_orig">Map</string>
     <string name="title_activity_main_example2_orig">MainActivityExample2Orig</string>
+    <string name="title_activity_main_example4">MainActivityExample4</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
