Glue all examples under single navigated drawer app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_main_example4">MainActivityExample4</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_show_case">ShowCase</string>
+    <string name="title_activity_tabbed">TabbedActivity</string>
 </resources>
